tests/snapshots/generated_from_inputs__bad_bad013.snap
---
source: tests/fixtures.rs
description: "int main() {\n      string x ;\n      x = \"pi\" + 1 ;\n      return 0 ;\n}\n"
input_file: inputs/bad/bad013.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad013:3:18 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mp[0m[38;5;249mi[0m[38;5;249m"[0m[38;5;249m [0m[38;5;249m+[0m[38;5;249m [0m[31m1[0m[38;5;249m [0m[38;5;249m;[0m
 [38;5;240m  │[0m                  [31m┬[0m  
 [38;5;240m  │[0m                  [31m╰[0m[31m─[0m[31m─[0m Type mismatch: expected `string`, found `int`
[38;5;246m───╯[0m
