tests/snapshots/generated_from_inputs__bad_bad015.snap
---
source: tests/fixtures.rs
description: "// passing string to printInt().\n\nint main() {\n\tprintInt(\"foo\");\n\treturn 0 ;\n}\n"
input_file: inputs/bad/bad015.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad015:4:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mp[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249mI[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m([0m[31m"[0m[31mf[0m[31mo[0m[31mo[0m[31m"[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m              [31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `string`
[38;5;246m───╯[0m
