tests/snapshots/generated_from_inputs__bad_bad016.snap
---
source: tests/fixtures.rs
description: "// passing integers to printString().\n\nint main() {\n\tprintString(1);\n\treturn 0 ;\n}\n"
input_file: inputs/bad/bad016.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad016:4:14 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mp[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249mS[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m([0m[31m1[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m                 [31m┬[0m  
 [38;5;240m  │[0m                 [31m╰[0m[31m─[0m[31m─[0m Type mismatch: expected `string`, found `int`
[38;5;246m───╯[0m
