tests/snapshots/generated_from_inputs__bad_bad017.snap
---
source: tests/fixtures.rs
description: "// 0 instead of 1 argument\n\nint main() {\n\tint x = foo();\n\treturn 0 ;\n}\n\nint foo(int y) {\n return y;\n}\n\n"
input_file: inputs/bad/bad017.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad017:4:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31mf[0m[31mo[0m[31mo[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m             [31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m              [31m╰[0m[31m─[0m[31m─[0m[31m─[0m Wrong number of arguments: expected 1, found 0
[38;5;246m───╯[0m
