tests/snapshots/generated_from_inputs__bad_bad019.snap
---
source: tests/fixtures.rs
description: "// 2 instead of 1 arguments\n\nint main() {\n\tint x = foo(1,2);\n\treturn 0 ;\n}\n\nint foo(int y) {\n return y;\n}\n\n"
input_file: inputs/bad/bad019.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad019:4:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31mf[0m[31mo[0m[31mo[0m[38;5;249m([0m[38;5;249m1[0m[38;5;249m,[0m[38;5;249m2[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m             [31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m              [31m╰[0m[31m─[0m[31m─[0m[31m─[0m Wrong number of arguments: expected 1, found 2
[38;5;246m───╯[0m
