tests/snapshots/generated_from_inputs__bad_bad021.snap
---
source: tests/fixtures.rs
description: "/* Testing that main must return. */\n\n/* All functions should return a value of their value type. This is not a valid Javalette program: */\n\nint main() {\n}\n"
input_file: inputs/bad/bad021.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad021:5:12 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [31m╭[0m[31m─[0m[31m▶[0m[31m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[31m{[0m
 [38;5;246m6 │[0m [31m├[0m[31m─[0m[31m▶[0m[31m [0m[31m}[0m
 [38;5;240m  │[0m [31m│[0m       
 [38;5;240m  │[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Missing return statement
[38;5;246m───╯[0m
