tests/snapshots/generated_from_inputs__bad_bad022.snap
---
source: tests/fixtures.rs
description: "// Assigning string to int variable.\n\nint main () {\n int x = \"\";\n return 0 ;\n}"
input_file: inputs/bad/bad022.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad022:4:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m"[0m[31m"[0m[38;5;249m;[0m
 [38;5;240m  │[0m          [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m           [31m╰[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `string`
[38;5;246m───╯[0m
