tests/snapshots/generated_from_inputs__bad_bad025.snap
---
source: tests/fixtures.rs
description: "int main() {\n   return f(3); \n}\n\nint f(int x) {\n    if (x<0) \n       return x;\n}\n"
input_file: inputs/bad/bad025.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m bad025:5:14 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [31m╭[0m[31m─[0m[31m▶[0m[31m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mf[0m[38;5;249m([0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m)[0m[38;5;249m [0m[31m{[0m
 [38;5;240m  ┆[0m [31m┆[0m   
 [38;5;246m8 │[0m [31m├[0m[31m─[0m[31m▶[0m[31m [0m[31m}[0m
 [38;5;240m  │[0m [31m│[0m       
 [38;5;240m  │[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Missing return statement
[38;5;246m───╯[0m
